--- a/calculator.html
+++ b/calculator.html
@@ -16,3 +16,6 @@ function cube() {
 </body>
 </html>
 =================================================
+$ cd mi_repo # Para entrar en el directorio de trabajo
+$ git status # Para conocer el estado de los ficheros
+$ git log --oneline 
