--- a/calculator.html
+++ b/calculator.html
@@ -19,3 +19,7 @@ function cube() {
 $ cd mi_repo # Para entrar en el directorio de trabajo
 $ git status # Para conocer el estado de los ficheros
 $ git log --oneline 
+
+$ git add <fichero1> <fichero2> …
+$ git commit # abre el editor. Introducir entonces el msg x^3 button y
+ # cerrar editor para finalizar creación de commit “x^3 button”
